--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,16 @@
     <artifactId>mssc-config-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>mssc-config-server</name>
-    <description>Demo project for Spring Boot</description>
+    <description>Config server</description>
     <properties>
         <java.version>11</java.version>
         <spring-cloud.version>2020.0.3</spring-cloud.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-server</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
